Switched to f2py wrapped Fortran code.

--- a/src/zipper/zipper/makefile
+++ b/src/zipper/zipper/makefile
@@ -1,23 +1,23 @@
 zipper: zipper.f forward.f inverse.f polygon.f cgrids.f corders.f\
 imagegr.f polyline.f blankl.f block45.f extdist.f fluid.f stagpt.f\
 whitney.f geodes.f
-	gfortran  -O0 -o zipper zipper.f
-	gfortran  -O0 -o forward forward.f
-	gfortran  -O0 -o inverse inverse.f
-	gfortran  -O0 -o polygon polygon.f
-	gfortran  -O0 -o cgrids cgrids.f
-	gfortran  -O0 -o corders corders.f
-	gfortran  -O0 -o imagegr imagegr.f
-	gfortran  -O0 -o polyline polyline.f
-	gfortran  -O0 -o blankl blankl.f
-	gfortran  -O0 -o block45 block45.f
-	gfortran  -O0 -o extdist extdist.f
-	gfortran  -O0 -o fluid fluid.f
-	gfortran  -O0 -o stagpt stagpt.f
-	gfortran  -O0 -o whitney whitney.f
-	gfortran  -O0 -o geodes geodes.f
-	gfortran  -O0 -o circle circle.f
-	gfortran  -O0 -o origpre origpre.f
+	f77  -O0 -o zipper zipper.f
+	f77  -O0 -o forward forward.f
+	f77  -O0 -o inverse inverse.f
+	f77  -O0 -o polygon polygon.f
+	f77  -O0 -o cgrids cgrids.f
+	f77  -O0 -o corders corders.f
+	f77  -O0 -o imagegr imagegr.f
+	f77  -O0 -o polyline polyline.f
+	f77  -O0 -o blankl blankl.f
+	f77  -O0 -o block45 block45.f
+	f77  -O0 -o extdist extdist.f
+	f77  -O0 -o fluid fluid.f
+	f77  -O0 -o stagpt stagpt.f
+	f77  -O0 -o whitney whitney.f
+	f77  -O0 -o geodes geodes.f
+	f77  -O0 -o circle circle.f
+	f77  -O0 -o origpre origpre.f
 	chmod a+x ../demo*
 
 clean:
