Finished wrapping zipper.f; added plot() to zipper.py

--- a/.hgignore
+++ b/.hgignore
@@ -12,10 +12,8 @@ syntax: glob
 *.tmp
 
 .DS_Store
-src/zipper/output/*.*
-src/zipper/output/logfile
-src/zipper/output/circflow
 
+src/zipper/zipper/fort.*
 src/zipper/zipper/origpre
 src/zipper/zipper/blankl
 src/zipper/zipper/block45
